# Cybermanju-Drive

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fix.md  index.html  package-lock.json  package.json  push.sh  vite.config.wasm.ts  worklog.md
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
crates/compression/: Cargo.toml
crates/compression/src/: lib.rs  triple.rs  types.rs
crates/compression/src/layers/: brotli_layer.rs  lz4.rs  mod.rs  zstd_layer.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: database.rs
crates/drive-wasm/: Cargo.toml
crates/drive-wasm/src/: compression.rs  crypto.rs  lib.rs
crates/faces/: Cargo.toml
crates/faces/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: compression.rs  crypto.rs  db.rs  lib.rs  search.rs  types.rs  web.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  schema.rs  sync.rs
crates/web/: Cargo.toml
docker/server/: Cargo.toml
docker/server/src/: main.rs  web_dashboard.rs
keymaps/: default.kpd  default.kpl
scripts/: build-all.sh  build-wasm.sh  check-all.sh  dev.sh
src/: App.vue  keymaps.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/flatpak/: com.cybermanju.drive.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  audit.rs  batch.rs  collections.rs  compression.rs  dashboard.rs  encryption.rs  faces.rs  files.rs  import.rs  map.rs  mod.rs  search.rs  share.rs  sync.rs  trash.rs  users.rs  versions.rs
src-tauri/src/compression/: mod.rs  triple.rs
src-tauri/src/crypto/: mod.rs  pqc.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/faces/: mod.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/search/: mod.rs  tantivy_index.rs
src-tauri/src/sync/: backends.rs  mod.rs  models.rs  oauth.rs  pipeline.rs
src-tauri/src/tree_sitter/: mod.rs
src-tauri/src/web_dashboard/: mod.rs
src/assets/: main.css
src/components/: AppWindow.vue  CanvasEngine.vue  CodeIntelligencePanel.vue  CollectionsPanel.vue  CommandPalette.vue  CompressionPanel.vue  ConfirmDialog.vue  ContextMenu.vue  DashboardOverlay.vue  DesktopShell.vue  Dock.vue  EncryptionPanel.vue  FaceGroupingPanel.vue  FileGrid.vue  FilePermissionsPanel.vue  FilePreview.vue  FileTooltip.vue  FileUploadDialog.vue  KeyboardShortcutsHelp.vue  LandingPage.vue  LoadingSpinner.vue  LoginPopup.vue  MapView.vue  MatrixRain.vue  MobileNav.vue  NotificationStack.vue  PrayerFlags.vue  SettingsPage.vue  Sidebar.vue  StatusBar.vue  StorageDashboard.vue  SyncPanel.vue  TopBar.vue  TopMenuBar.vue  TreeNode.vue  UserManagementPanel.vue  WebDashboardPanel.vue  WindowContent.vue
src/composables/: shortcutsKey.ts  useContextMenu.ts  useDrag.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useNotifications.ts  useShortcuts.ts  useSwipe.ts  useTauri.ts  useTouchConfig.ts  useWindowManager.ts
src/stores/: app.ts
src/types/: index.ts
