[package]
name = "cybermanju-drive"
version = "0.0.1"
description = "Cybermanju Drive — Quantum-resistant encrypted file manager"
authors = ["Cybermanju Team"]
edition = "2021"

[features]
default = []
onnx-face = ["cybermanju-faces/onnx-face"]

[lib]
name = "cybermanju_drive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace crates
cybermanju-types = { path = "../crates/types" }
cybermanju-crypto = { path = "../crates/crypto" }
cybermanju-compression = { path = "../crates/compression" }
cybermanju-search = { path = "../crates/search" }
cybermanju-db = { path = "../crates/db" }
cybermanju-faces = { path = "../crates/faces" }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

# Auth & crypto (additional)
argon2 = "0.5"
jsonwebtoken = "9"

# Image & media
kamadak-exif = "0.5"
image = "0.25"
infer = "0.16"
mime_guess = "2"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
url = "2"

# File ops
walkdir = "2.5"
rayon = "1.10"
