[package]
name = "cybermanju-crypto"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptography engine (ML-KEM, ML-DSA, ChaCha20)"

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hkdf = "0.12"
hmac = "0.12"
ml-dsa = { version = "0.1.1", features = ["getrandom"] }
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "3"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
