[package]
name = "cybermanju-drive-wasm"
version = "0.1.0"
edition = "2021"
description = "Cybermanju Drive — WASM bridge for browser-based crypto, compression, and storage"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Crypto (pure Rust only, no C bindings)
blake3 = "1"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
ml-dsa = { version = "0.1.1", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
signature = "3"
rand_core = { version = "0.6", features = ["getrandom"] }

# Compression (pure Rust only)
lz4_flex = "0.11"
brotli = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
wasm-logger = "0.2"
log = "0.4"
