[package]
name = "cybermanju-faces"
version = "0.1.0"
edition = "2021"
description = "Face detection, embedding, and clustering"

[dependencies]
anyhow = "1"
blake3 = "1"
cybermanju-types = { path = "../types" }
log = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
