[package]
name = "cybermanju-web"
version = "0.1.0"
edition = "2021"
description = "HTTP REST server with JWT auth and rate limiting"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
cybermanju-types = { path = "../types" }
jsonwebtoken = "9"
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
