[package]
name = "cybermanju-drive-server"
version = "0.1.0"
edition = "2021"
description = "Standalone web dashboard server for Cybermanju Drive (Docker deployment)"

[dependencies]
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1